--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,35 @@
 	</properties>
 	<dependencies>
 	
-			<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
-		<dependency>
-		    <groupId>com.oracle.database.jdbc</groupId>
-		    <artifactId>ojdbc11</artifactId>
-		    <version>23.3.0.23.09</version>
-		</dependency>
+	
+	<!-- mybatis  -->
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>3.5.9</version>
+	</dependency>
+	
+	<!-- mybatis-spring -->
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>2.0.7</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+	    <version>${org.springframework-version}</version>
+	</dependency>
+	
+
+	<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
+	<dependency>
+		   <groupId>com.oracle.database.jdbc</groupId>
+		   <artifactId>ojdbc11</artifactId>
+		   <version>23.3.0.23.09</version>
+	</dependency>
 	
 		<!-- Spring -->
 		<dependency>
