--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,5 +49,9 @@
     <filter-name>LoginFilter</filter-name>
     <url-pattern>/member/delete</url-pattern>
   </filter-mapping>
+      <filter-mapping>
+    <filter-name>LoginFilter</filter-name>
+    <url-pattern>/notice/write</url-pattern>
+  </filter-mapping>
 
 </web-app>
