--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,14 @@
 	</properties>
 	<dependencies>
 	
+	<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+	<dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.5</version>
+	</dependency>
 	
+
 	<!-- mybatis  -->
 	<dependency>
 	    <groupId>org.mybatis</groupId>
