--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	<!-- 에러처리 -->
+	<error-page>
+	<!--404에러가 뜨면 jsp보여줌  -->
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/errors/error_400.jsp</location>
+	</error-page>
+		<error-page>
+	<!--400에러가 뜨면 jsp보여줌  -->
+		<error-code>400</error-code>
+		<location>/WEB-INF/views/errors/error_400.jsp</location>
+	</error-page>
+
   <filter>
     <filter-name>encode</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
